<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DragonBox-v1</string>
    <string name="main_btn_previous">上一项</string>
    <string name="main_btn_failed">失败</string>
    <string name="main_btn_skip">跳过</string>
    <string name="main_btn_passed">通过</string>
    <string name="uninstall_bash">卸载</string>
    <string name="recovery">恢复出厂</string>
    <string name="format_sd">擦除SD卡</string>
    <string name="result_failed">失败</string>
    <string name="result_reset">未测试</string>
    <string name="result_passed">通过</string>
    <string name="result_output">结果输出</string>
    <string name="result_exit">退出</string>
    <string name="title_previous">上一项:</string>
    <string name="title_current">当前项:</string>
    <string name="title_next">下一项:</string>
    <string name="title_no">无</string>
    <string name="use_external_config_file">使用外部存储的配置文件</string>
    <string name="use_usbhost_config_file">使用usbhost配置文件</string>
    <string name="use_internal_config_file">使用内置sd卡存储的配置文件</string>
    <string name="use_default_config_file">使用默认配置文件</string>
    <string name="str_confirm">确认</string>
    <string name="reset_device">是否擦除Sdcard，并恢复出厂设置？</string>
    <string name="uninstall_dragonbox_description">是否卸载DragonBox？</string>
    <string name="title_all_list">所有测试项目</string>
    <string name="action_bar_all_list">单项测试</string>
    <string name="action_bar_audio">音频输出模式</string>
    <string name="action_bar_video">视频输出模式</string>
    <string name="all_case_list_return">返回</string>
    <string name="case_retest">重新测试</string>
    <string name="configuration_title">配置DragonBox</string>
    <string name="configuration_reset">重置</string>
    <string name="configuration_save">保存</string>
    <string name="configuration_suffix">配置</string>
    <string name="configutation_ok">确认</string>
    <string name="configutation_cancel">取消</string>
    <string name="configutation_delete">删除</string>
    <string name="configuration_write_succeful">写入配置成功</string>
    <string name="configuration_write_failed">写入配置失败</string>
    <string name="configuration_edit_usbhost">编辑UsbHost上的配置</string>
    <string name="configuration_edit_extsd">编辑ExtSD上的配置</string>
    <string name="configuration_edit_sdcard">编辑SDCARD上的配置</string>
    <string name="configuration_exit">退出</string>
    <string name="configuration_report">输出报表</string>
    <string name="case_comprehensive">[综合测试]</string>
    <string name="case_comprehensive_config_des">请选择所需的测试项</string>
    <string name="case_comprehensive_config_version">版本测试</string>
    <string name="case_comprehensive_config_gsensor">gsensor测试</string>
    <string name="case_comprehensive_config_lsensor">lsensor测试</string>
    <string name="case_comprehensive_config_psensor">psensor测试</string>
    <string name="case_comprehensive_config_gyrosensor">gyrosensor测试</string>
    <string name="case_comprehensive_config_memory">存储容量测试</string>
    <string name="case_comprehensive_config_wifi">wifi测试</string>
    <string name="case_comprehensive_config_elthernet">elthernet测试</string>
    <string name="case_comprehensive_config_storage">OTG/SD测试</string>
    <string name="case_comprehensive_config_snmac">SN/MAC测试</string>
    <string name="case_comprehensive_config_hdmi">HDMI测试</string>
    <string name="case_comprehensive_config_music">音乐测试</string>
    <string name="case_comprehensive_config_browser">浏览器测试</string>
    <string name="case_comprehensive_config_video">视频测试</string>
    <string name="case_comprehensive_config_backlight">背光测试</string>
    <string name="case_comprehensive_config_prefix">启用的测试项:</string>
    <string name="case_comprehensive_config_passable">版本设置</string>
    <string name="case_comprehensive_config_passable_version">版本测试：</string>
    <string name="case_comprehensive_config_passable_wifi">WiFi测试：</string>
    <string name="cse_comprehensive_config_passable_fireware">固件版本:</string>
    <string name="cse_comprehensive_config_passable_tpfw">TPFW版本:</string>
    <string name="case_comprehensive_config_passable_memory">存储容量测试：</string>
    <string name="case_comprehensive_config_passable_memory_min">输入最小容量</string>
    <string name="case_comprehensive_config_passable_mb">MB</string>
    <string name="case_comprehensive_config_passable_version_detail">点击获取设备信息</string>
    <string name="case_comprehensive_config_passable_version_ok">获取成功</string>
    <string name="case_comprehensive_config_spdif">SPDIF测试</string>
    <string name="case_comprehensive_config_cvbs">CVBS测试</string>
    <string name="case_comprehensive_config_sdcard">SD卡测试</string>
    <string name="case_comprehensive_config_usb">usb插口测试</string>
    <string name="case_comprehensive_config_led">LED测试</string>
    <string name="case_comprehensive_config_wifi_ssid">SSID：</string>
    <string name="case_comprehensive_config_wifi_pwd">密码：</string>
    <string name="case_version_name">[版本测试]</string>
    <string name="case_version_info">固件版本:%1$s\n设备型号:%2$s\n版本:%3$s\nCPU频率(当前\\最大\\最小):\n%4$s</string>
    <string name="case_version_info_fireware">固件版本：</string>
    <string name="case_version_info_display">版本号：</string>
    <string name="case_version_info_min_cpu">CPU最小频率：</string>
    <string name="case_version_info_max_cpu">CPU最大频率：</string>
    <string name="case_version_info_model">设备型号：</string>
    <string name="case_gsensor_name">[GSensor测试]</string>
    <string name="case_gsensor_selfttest">校准中，请稍候…</string>
    <string name="case_gsensor_selftest_name">自动校准</string>
    <string name="case_gsensor_axis">GSensor轴数:</string>
    <string name="case_gsensor_axis_2">2轴</string>
    <string name="case_gsensor_axis_3">3轴</string>
    <string name="case_gsensor_min_gravity">最小加速度</string>
    <string name="case_gsensor_gravity_default">9</string>
    <string name="case_gsensor_gravity_unit">㎡/s</string>
    <string name="case_backlight_name">[背光测试]</string>
    <string name="case_backlight_redo">重新测试</string>
    <string name="case_backlight_description">测试过程中，屏幕亮度会自动发生改变。</string>
    <string name="case_memory_name">[存储容量测试]</string>
    <string name="case_memory_info">设备名:%1$s\n总量:%2$s\n剩余:%3$s</string>
    <string name="case_sdcard_name">[TF 卡测试]</string>
    <string name="case_sdcard_info">%1$s %2$s</string>
    <string name="case_usb_name">[USB测试]</string>
    <string name="case_led_name">[LED测试]</string>
    <string name="case_led_state">LED OK</string>
    <string name="case_led_state_notest">LED 未测试</string>
    <string name="case_led_state_fail">LED 不亮</string>
    <string name="case_wifi_name_1">[Wifi模块测试]</string>
    <string name="case_wifi_name">[Wifi测试]</string>
    <string name="case_wifi_strength">强度：</string>
    <string name="case_wifi_security">安全性：</string>
    <string name="case_wifi_password">密码：</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_disabled_password_failure">"身份验证出现问题"</string>
    <string name="wifi_disabled_network_failure">"已停用状况不佳的互联网连接"</string>
    <string name="wifi_disabled_generic">"已停用"</string>
    <string name="case_wifi_strength_default">65</string>
    <string name="case_comprehensive_config_passable_wifi_db">db</string>
    <string name="case_battery_name">[电池测试]</string>
    <string name="case_hard_key_name">[按键测试]</string>
    <string name="case_hard_key_home">HOME 键</string>
    <string name="case_hard_key_back">BACK 键</string>
    <string name="case_hard_key_menu">Menu 键</string>
    <string name="case_hard_key_volume_up">音量 + 键 </string>
    <string name="case_hard_key_volume_down">音量 - 键</string>
    <string name="case_hard_key_search">搜索 键</string>
    <string name="case_hard_key_description">当前我们进入了按键测试,\n请按下面列出的按键以通过测试,\n如果测试失败 ,请点击"按键测试失败"按钮.</string>
    <string name="case_hard_key_failed_btn">按键测试失败</string>
    <string name="case_hard_key_config_des">请为设备选择正确的物理按键</string>
    <string name="case_hard_key_config_prefix">你为设备所配置的按键为：</string>
    <string name="case_lcd_name">[LCD测试]</string>
    <string name="case_lcd_tips">请检查屏幕是否有坏点</string>
    <string name="case_lcd_btn_redo">重新测试</string>
    <string name="case_lcd_config_des">请输入一个有效的纯色变化的间隔时间（单位：ms）</string>
    <string name="case_lcd_config_prefix">当前设置的纯色页面的变化间隔时间:</string>
    <string name="case_lcd_config_need_click">需要单击切换颜色</string>
    <string name="case_recorder_name">[录音测试]</string>
    <string name="case_recorder_accept">完成</string>
    <string name="case_recorder_discard">取消</string>
    <string name="case_recorder_max_length_reached">已超过最大容量</string>
    <string name="case_recorder_min_available">"还剩 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="case_recorder_sec_available">"还剩 <xliff:g id="SECONDS">%d</xliff:g> 秒"</string>
    <string name="case_recorder_message_recorded">信息已录制</string>
    <string name="case_recorder_recording_stopped">录音停止</string>
    <string name="case_recorder_recording">"录音"</string>
    <string name="case_recorder_record_your_message">"录下您的留言"</string>
    <string name="case_recorder_review_message">"查看信息"</string>
    <string name="case_recorder_timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
    <string name="case_recorder_insert_sd_card">Please insert an SD card</string>
    <string name="case_recorder_storage_is_full">"存储空间已满"</string>
    <string name="case_recorder_error_sdcard_access" product="default">"无法访问存储设备"</string>
    <string name="case_recorder_error_app_internal">"内部应用程序错误"</string>
    <string name="case_recorder_error_mediadb_new_record">"无法保存录制的音频"</string>
    <string name="case_recorder_button_ok">"确定"</string>
    <string name="case_recorder_config_des">请输入一个有效的录音时间（单位：ms）.</string>
    <string name="case_recorder_config_prefix">你为设备所配置的录音时间为:</string>
    <string name="case_speaker_name">[SPDIF测试]</string>
    <string name="case_speaker_plugged_in">当前耳机插入状态：</string>
    <string name="case_speaker_pluged">耳机插入</string>
    <string name="case_speaker_btn_redo">重新测试</string>
    <string name="case_speaker_headset">测试耳机</string>
    <string name="case_speaker_spdif">打开SPDIF</string>
    <string name="case_speaker_spdif_notice">请把SPDIF线插上，并点击“打开SPDIF”按钮,然后选择声音状态</string>
    <string name="case_spdif_name">[SPDIF 声音测试]</string>
    <string name="case_spdif_true">有声音</string>
    <string name="case_spdif_false">没声音</string>
    <string name="case_spdif_left">左声道</string>
    <string name="case_spdif_right">右声道</string>
    <string name="case_spdif_mid">双声道</string>
    <string name="case_spdif_loading">加载中</string>
    <string name="case_cvbs_name">[CVBS测试]</string>
    <string name="case_cvbs_state">CVBS 已接入</string>
    <string name="case_cvbs_state_null">CVBS 未接入</string>
    <string name="case_cvbs_left">左声道 未测试</string>
    <string name="case_cvbs_right">右声道 未测试</string>
    <string name="case_hdmi_name">[HDMI测试]</string>
    <string name="case_hdmi_state_null">HDMI 未接入</string>
    <string name="case_hdmi_sound_null">HDMI声音 未测试</string>
    <string name="case_elthernet">[RJ45测试]</string>
    <string name="case_elthernet_inline">插入网线 未测试</string>
    <string name="case_elthernet_ipaddress_notest">IP地址 未测试</string>
    <string name="case_spidf_left">左声道 未测试</string>
    <string name="case_spidf_right">右声道 未测试</string>
</resources>