<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cvbs_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/case_cvbs_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_inline_cvbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cvbs_putin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_cvbs_state_null"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_watch_cvbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cvbs_watch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_cvbs_left"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_sound_cvbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cvbs_sound_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_cvbs_right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>