<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/hdmi_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/case_hdmi_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_below="@+id/hdmi_name"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_inline_hdmi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hdmi_putin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_hdmi_state_null"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_sound_hdmi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hdmi_sound_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_hdmi_sound_null"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />
</LinearLayout>