<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/elthernet_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/case_elthernet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_rj45_inline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/elthernet_name">

        <TextView
            android:id="@+id/case_elthernet_linestate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_elthernet_inline"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_rj45_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout_rj45_inline" >

        <TextView
            android:id="@+id/case_elthernet_ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_elthernet_ipaddress_notest"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

</LinearLayout>