<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/spdif_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/case_spdif_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />
<!--
    <LinearLayout
        android:id="@+id/linearLayout_inline_spidf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/spidf_putin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_spidf_state_null"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
 -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_left_spidf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/spidf_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_spidf_left"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/linearLayout_right_spidf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/spidf_right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_spidf_right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>
