<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/strength_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/strength_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_wifi_strength"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/security_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/security_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_wifi_security"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_wifi_password"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

</ScrollView>